# ztp-dashboard

./: .gitignore  README.md  build-linux-binary.sh  build-windows-exe.ps1  pyproject.toml  version_info.txt
ztp_dashboard/: __main__.py  launcher.py  state.py  ui.py
ztp_dashboard/data/: arista-ztp-startup.py
